--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,13 +20,13 @@
       {% endfor %}
     </nav>
     <!-- HTML elements for search -->
-    <input type="text" id="search-input" placeholder="搜索博客文章...">
+    <input type="text" id="search-input" placeholder="搜索博客文章..." style="width=50%; margin-top:32px; margin-bottom:16px;">
     <ul id="results-container"></ul>
 
     <!-- or without installing anything -->
     <script src="https://unpkg.com/simple-jekyll-search@latest/dest/simple-jekyll-search.min.js"></script>
     <script>
-	    SimpleJekyllSearch({
+    SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
     resultsContainer: document.getElementById('results-container'),
     json: '/search.json',
