--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
       {% endfor %}
     </nav>
     <!-- HTML elements for search -->
-    <input type="text" id="search-input" placeholder="搜索博客文章..." style="width=50%; margin-top:32px; margin-bottom:16px;">
+    <input type="text" id="search-input" placeholder="搜索博客文章..." style="width:50%; margin-top:32px; margin-bottom:16px;">
     <ul id="results-container"></ul>
 
     <!-- or without installing anything -->
